# practica-web-scraping

./: README.md  pr1.py  pyproject.toml
